import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		// No banned packages configured, nothing is flagged.
		'{"dependencies": {"foo": "^1.0.0"}}',
		// Package not in banned list.
		{
			code: '{"dependencies": {"foo": "^1.0.0"}}',
			options: [{packages: ['bar']}],
		},
		// Empty packages list.
		{
			code: '{"dependencies": {"foo": "^1.0.0"}}',
			options: [{packages: []}],
		},
		// No dependencies field.
		'{"name": "my-package"}',
		// Non-string value for a banned package name is still flagged by name, but test no-dependency case.
		{
			code: '{"dependencies": {"baz": "^1.0.0"}}',
			options: [{packages: ['foo', 'bar']}],
		},
	],
	invalid: [
		// String entry, default message.
		{
			code: '{"dependencies": {"foo": "^1.0.0"}}',
			options: [{packages: ['foo']}],
		},
		// Object entry with custom message.
		{
			code: '{"dependencies": {"foo": "^1.0.0"}}',
			options: [{packages: [{name: 'foo', message: 'Use bar instead.'}]}],
		},
		// Object entry without custom message (uses default).
		{
			code: '{"dependencies": {"foo": "^1.0.0"}}',
			options: [{packages: [{name: 'foo'}]}],
		},
		// Empty custom message falls back to the default message.
		{
			code: '{"dependencies": {"foo": "^1.0.0"}}',
			options: [{packages: [{name: 'foo', message: ''}]}],
		},
		// Multiple packages banned, one matches.
		{
			code: '{"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}}',
			options: [{packages: ['foo', 'baz']}],
		},
		// DevDependencies.
		{
			code: '{"devDependencies": {"foo": "^1.0.0"}}',
			options: [{packages: ['foo']}],
		},
		// PeerDependencies.
		{
			code: '{"peerDependencies": {"foo": "*"}}',
			options: [{packages: ['foo']}],
		},
		// OptionalDependencies.
		{
			code: '{"optionalDependencies": {"foo": "^1.0.0"}}',
			options: [{packages: ['foo']}],
		},
		// Both string and object entries.
		{
			code: '{"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}}',
			options: [{packages: ['foo', {name: 'bar', message: 'Deprecated.'}]}],
		},
		// A ban list names packages, and an `npm:` alias installs that exact package under another key, so
		// matching only the key would let a ban be bypassed with an alias.
		{
			code: '{"dependencies": {"my-lodash": "npm:lodash@^4.0.0"}}',
			options: [{packages: ['lodash']}],
		},
		{
			code: '{"dependencies": {"x": "NPM:lodash@^4.0.0"}}',
			options: [{packages: ['lodash']}],
		},
		{
			code: '{"devDependencies": {"my-lodash": "npm:lodash@^4.0.0"}}',
			options: [{packages: [{name: 'lodash', message: 'use the lodash-es fork'}]}],
		},
		// An empty name is a name the list holds, and `no-restricted-fields` reports the same key.
		{
			code: '{"dependencies": {"": "^1.0.0"}}',
			options: [{packages: ['']}],
		},
		// The custom message wins over a bare name for the same package, whatever the order, as in `no-restricted-fields`.
		{
			code: '{"dependencies": {"x": "^1.0.0"}}',
			options: [{packages: [{name: 'x', message: 'custom'}, 'x']}],
		},
		{
			code: '{"dependencies": {"x": "^1.0.0"}}',
			options: [{packages: ['x', {name: 'x', message: 'custom'}]}],
		},
	],
});
