exports[`invalid(1): {\"dependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - 'foo'

Code:
  1 | {"dependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(1): {\"dependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0"}}
    |                   ^^^^^ Do not use \`foo\`.

`;

exports[`invalid(10): {\"dependencies\": {\"my-lodash\": \"npm:lodash@^4.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - 'lodash'

Code:
  1 | {"dependencies": {"my-lodash": "npm:lodash@^4.0.0"}}

`;

exports[`invalid(10): {\"dependencies\": {\"my-lodash\": \"npm:lodash@^4.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"my-lodash": "npm:lodash@^4.0.0"}}
    |                   ^^^^^^^^^^^ Do not use \`lodash\`.

`;

exports[`invalid(11): {\"dependencies\": {\"x\": \"NPM:lodash@^4.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - 'lodash'

Code:
  1 | {"dependencies": {"x": "NPM:lodash@^4.0.0"}}

`;

exports[`invalid(11): {\"dependencies\": {\"x\": \"NPM:lodash@^4.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"x": "NPM:lodash@^4.0.0"}}
    |                   ^^^ Do not use \`lodash\`.

`;

exports[`invalid(12): {\"devDependencies\": {\"my-lodash\": \"npm:lodash@^4.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - name: 'lodash'
      message: 'use the lodash-es fork'

Code:
  1 | {"devDependencies": {"my-lodash": "npm:lodash@^4.0.0"}}

`;

exports[`invalid(12): {\"devDependencies\": {\"my-lodash\": \"npm:lodash@^4.0.0\"}} 2`] = `

Message:
> 1 | {"devDependencies": {"my-lodash": "npm:lodash@^4.0.0"}}
    |                      ^^^^^^^^^^^ use the lodash-es fork

`;

exports[`invalid(13): {\"dependencies\": {\"\": \"^1.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - ''

Code:
  1 | {"dependencies": {"": "^1.0.0"}}

`;

exports[`invalid(13): {\"dependencies\": {\"\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"": "^1.0.0"}}
    |                   ^^ Do not use \`\`.

`;

exports[`invalid(14): {\"dependencies\": {\"x\": \"^1.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - name: 'x'
      message: 'custom'
    - 'x'

Code:
  1 | {"dependencies": {"x": "^1.0.0"}}

`;

exports[`invalid(14): {\"dependencies\": {\"x\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"x": "^1.0.0"}}
    |                   ^^^ custom

`;

exports[`invalid(15): {\"dependencies\": {\"x\": \"^1.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - 'x'
    - name: 'x'
      message: 'custom'

Code:
  1 | {"dependencies": {"x": "^1.0.0"}}

`;

exports[`invalid(15): {\"dependencies\": {\"x\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"x": "^1.0.0"}}
    |                   ^^^ custom

`;

exports[`invalid(2): {\"dependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - name: 'foo'
      message: 'Use bar instead.'

Code:
  1 | {"dependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(2): {\"dependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0"}}
    |                   ^^^^^ Use bar instead.

`;

exports[`invalid(3): {\"dependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - name: 'foo'

Code:
  1 | {"dependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(3): {\"dependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0"}}
    |                   ^^^^^ Do not use \`foo\`.

`;

exports[`invalid(4): {\"dependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - name: 'foo'
      message: ''

Code:
  1 | {"dependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(4): {\"dependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0"}}
    |                   ^^^^^ Do not use \`foo\`.

`;

exports[`invalid(5): {\"dependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - 'foo'
    - 'baz'

Code:
  1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}}

`;

exports[`invalid(5): {\"dependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}}
    |                   ^^^^^ Do not use \`foo\`.

`;

exports[`invalid(6): {\"devDependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - 'foo'

Code:
  1 | {"devDependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(6): {\"devDependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"devDependencies": {"foo": "^1.0.0"}}
    |                      ^^^^^ Do not use \`foo\`.

`;

exports[`invalid(7): {\"peerDependencies\": {\"foo\": \"*\"}} 1`] = `

[Input]
Options:
- packages:
    - 'foo'

Code:
  1 | {"peerDependencies": {"foo": "*"}}

`;

exports[`invalid(7): {\"peerDependencies\": {\"foo\": \"*\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "*"}}
    |                       ^^^^^ Do not use \`foo\`.

`;

exports[`invalid(8): {\"optionalDependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - 'foo'

Code:
  1 | {"optionalDependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(8): {\"optionalDependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"optionalDependencies": {"foo": "^1.0.0"}}
    |                           ^^^^^ Do not use \`foo\`.

`;

exports[`invalid(9): {\"dependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - 'foo'
    - name: 'bar'
      message: 'Deprecated.'

Code:
  1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}}

`;

exports[`invalid(9): {\"dependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}}
    |                   ^^^^^ Do not use \`foo\`.

`;

exports[`invalid(9): {\"dependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}} 3`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}}
    |                                    ^^^^^ Deprecated.

`;
